--- a/config.ini
+++ b/config.ini
@@ -9,8 +9,8 @@ REDDIT_CLIENT_SECRET = gekSp20TMFL_dTuiS7nPcu72oK9VaQ
 USER_AGENT = Video to Tiktok by u/MAfridi08
 # Input your username and password for reddit. 
 # No Google Account.
-USERNAME = MAfridi08
-PASSWORD = Chanda.66
+USERNAME = 
+PASSWORD = 
 # For now this only works on Gif Recipes 
 # as it hosts the videos on Reddit.
 # but will eventually work on all subreddits./
